# zigbee_project

./: .gitignore
Coordinator/: sdkconfig
Coordinator/main/: CMakeLists.txt  color_utils.c  color_utils.h  esp_zigbee_gateway.c  webInterface.html  web_server.c  web_server.h  zb_devices.c  zb_devices.h
Coordinator/zigbee_coordinator/: CMakeLists.txt  sdkconfig
End Device/HA_on_off_light/HA_on_off_light/main/: esp_zb_light.c  light_driver.c  light_driver.h
End Device/HA_on_off_light/main/: CMakeLists.txt
